--- a/myatis_mbg/pom.xml
+++ b/myatis_mbg/pom.xml
@@ -49,6 +49,11 @@
                     <artifactId>mysql-connector-java</artifactId>
                     <version>8.0.16</version>
                 </dependency>
+                <dependency>
+                    <groupId>com.github.pagehelper</groupId>
+                    <artifactId>pagehelper</artifactId>
+                    <version>5.2.0</version>
+                </dependency>
             </dependencies>
         </plugin>
     </plugins>
